フッターrem変換

--- a/src/sass/page/_footer-menu__container-left.scss
+++ b/src/sass/page/_footer-menu__container-left.scss
@@ -6,7 +6,7 @@
 
   @include mq("md") {
     display: flex;
-    max-width: 452px;
+    max-width: rem(452);
     justify-content: space-between;
   }
 }
