--- a/src/sass/page/_footer-menu__container.scss
+++ b/src/sass/page/_footer-menu__container.scss
@@ -6,7 +6,7 @@
 
   @include mq("md") {
     justify-content: left;
-    margin-top: 15px;
+    margin-top: rem(15);
     white-space: nowrap;
   }
 }
