--- a/src/sass/page/_footer__copyright.scss
+++ b/src/sass/page/_footer__copyright.scss
@@ -17,9 +17,9 @@
     padding-bottom: rem(0);
     display: flex;
     justify-content: center;
-    font-size: 14px;
+    font-size: rem(14);
     line-height: calc(18/14);
-    padding-top: 40px;
-    padding-bottom: 80px;
+    padding-top: rem(40);
+    padding-bottom: rem(80);
   }
 }
