--- a/src/sass/page/_footer-logo-box.scss
+++ b/src/sass/page/_footer-logo-box.scss
@@ -2,11 +2,11 @@
 
 .footer-logo-box {
   display: flex;
-  margin-top: 17px;
+  margin-top: rem(17);
 
   @include mq("md") {
-    margin-left: 40px;
-    padding-top: 30px;
-    padding-bottom: 5px;
+    margin-left: rem(40);
+    padding-top: rem(30);
+    padding-bottom: rem(5);
   }
 }
