--- a/src/sass/page/_footer-menu__container-right.scss
+++ b/src/sass/page/_footer-menu__container-right.scss
@@ -1,15 +1,15 @@
 @use "global" as *;
 
 .footer-menu__container-right {
-  margin-left: 18px;
+  margin-left: rem(18);
   display: grid;
   width: 50%;
   max-width: rem(200);
 
   @include mq("md") {
     display: flex;
-    max-width: 436px;
+    max-width: rem(436);
     justify-content: space-between;
-    margin-left: 103px;
+    margin-left: rem(103);
   }
 }
