--- a/src/sass/page/_information.scss
+++ b/src/sass/page/_information.scss
@@ -5,10 +5,6 @@
   background-color: $green2;
 }
 
-// .information.section-title {
-//   text-indent: -0.4rem;
-// }
-
 .information__text-line {
   background-color: $green; /* 横線の色 */
   content: "";
@@ -18,17 +14,17 @@
 
   @include mq("md") {
     height: rem(1);
-    margin-top: 3px;
+    margin-top: rem(3);
   }
 }
 
 .information__img {
-  margin-top: 26px;
-  max-width: 345px;
+  margin-top: rem(26);
+  max-width: rem(345);
 
   @include mq("md") {
-    max-width: 540px;
-    margin-top: 0;
+    max-width: rem(540);
+    margin-top: rem(0);
   }
 }
 .information__img img {
@@ -43,27 +39,27 @@
 }
 
 .information__box {
-  margin-top: 25px;
+  margin-top: rem(25);
 
   @include mq("md") {
     margin-top: 0;
-    max-width: 492px;
+    max-width: rem(492);
     width: 100%;
-    margin-left: 48px;
+    margin-left: rem(48);
   }
 }
 
 .information__box-title {
-  font-size: 20px;
+  font-size: rem(20);
 
   @include mq("md") {
-    font-size: 24px;
+    font-size: rem(24);
     line-height: 1;
   }
 }
 
 .information__text {
-  margin-top: 7px;
+  margin-top: rem(7);
   font-weight: $regular;
   font-family: Noto Sans JP;
   line-height: 1.5;
@@ -72,7 +68,7 @@
 .information__button-layout {
   display: flex;
   justify-content: center;
-  margin-top: 40px;
+  margin-top: rem(40);
 }
 
 .information__container {
@@ -80,25 +76,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 39px;
+    margin-top: rem(39);
   }
 }
-
-// div.colorbox{
-//   position: relative;
-//   width: 80%;
-//   margin: 30px auto 30px;
-// }
-// div.colorbox div.color{
-//   position: absolute;
-//   top: 0;
-//   right: 0;
-//   width: 100%;
-//   height: 100%;
-//   z-index: 2;
-//   background-color: $green;
-// }
-// div.colorbox img{
-//   display: block;
-//   width: 100%;
-// }
