--- a/src/sass/page/_information__inner.scss
+++ b/src/sass/page/_information__inner.scss
@@ -10,11 +10,10 @@ padding-bottom: rem(84);
 max-width: rem(600);
 
 @include mq("md") {
-  padding-top: 91px;
+  padding-top: rem(91);
   padding-left: rem(23);
   padding-right: rem(27);
   padding-bottom: rem(74);
   max-width: rem(1130);
-  // margin-top: 10px;
   }
 }
