--- a/src/sass/page/_contact__box.scss
+++ b/src/sass/page/_contact__box.scss
@@ -8,7 +8,9 @@
     @include mq("md") {
       margin-left: 0;
       margin-right: 0;
-      max-width: rem(440);
+      max-width: rem(465);
       width: 100%;
+      padding-right: 25px;
+      // padding-left: 25px;
     }
   }
