--- a/src/sass/page/_header.scss
+++ b/src/sass/page/_header.scss
@@ -8,8 +8,8 @@
   width: 100%;
   height: rem(80);
   border-right-color: transparent;
-  opacity: 0.7;
-  background-color: $black2;
+  // opacity: 0.7;
+  background-color: rgba(13, 41, 54, 0.68);
   transition: 0.3s;
 
   @include mq("md") {
