--- a/src/sass/page/_information__img.scss
+++ b/src/sass/page/_information__img.scss
@@ -19,3 +19,22 @@
     margin-top: 0;
   }
 }
+
+.colorbox{
+  position: relative;
+  // width: 80%;
+  // margin: 30px auto 30px;
+}
+.colorbox .color{
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  background-color: $black2;
+}
+.colorbox img{
+  display: block;
+  width: 100%;
+}
