--- a/src/sass/page/_contact__title-layout.scss
+++ b/src/sass/page/_contact__title-layout.scss
@@ -5,5 +5,6 @@
     @include mq("md") {
       padding-left: 81px;
       border-left: rem(1) solid $green;
+      // margin-left: 56px;
     }
   }
