--- a/src/sass/page/_contact_container.scss
+++ b/src/sass/page/_contact_container.scss
@@ -5,7 +5,7 @@
     @include mq("md") {
       display: flex;
       box-shadow: rem(2) rem(2) rem(10) rgba(0, 0, 0, 0.25);
-      padding: rem(80) rem(112) 80px rem(50);
+      padding: rem(80) rem(112) rem(80) rem(50);
       justify-content: space-between;
     }
   }
