--- a/src/sass/page/_information__img.scss
+++ b/src/sass/page/_information__img.scss
@@ -3,6 +3,8 @@
 .information__img {
   margin-top: rem(26);
   max-width: rem(345);
+  margin-left: auto;
+  margin-right: auto;
 
   @include mq("md") {
     max-width: rem(540);
@@ -18,23 +20,4 @@
     aspect-ratio: 540/356;
     margin-top: 0;
   }
-}
-
-.colorbox{
-  position: relative;
-  // width: 80%;
-  // margin: 30px auto 30px;
-}
-.colorbox .color{
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 2;
-  background-color: $black2;
-}
-.colorbox img{
-  display: block;
-  width: 100%;
 }
