--- a/src/sass/page/_blog-button-layout.scss
+++ b/src/sass/page/_blog-button-layout.scss
@@ -8,7 +8,7 @@
   @include mq("md") {
     display: flex;
     justify-content: center;
-    padding-left: 0;
+    padding-left: rem(0);
     margin-top: rem(81);
   }
 }
