--- a/src/sass/page/_campaign-card-price__old-strike-through.scss
+++ b/src/sass/page/_campaign-card-price__old-strike-through.scss
@@ -3,9 +3,9 @@
 .campaign-card-price__old-strike-through {
   font-size: rem(20);
   font-weight: $bold;
-  text-decoration: line-through; /* 打ち消し線を設定します */
-  text-decoration-color: $red; /* 打ち消し線の色を赤色に設定します */
-  text-decoration-thickness: rem(3); /* 打ち消し線の太さを2pxに設定します */
+  text-decoration: line-through;
+  text-decoration-color: $red;
+  text-decoration-thickness: rem(3);
 
   @include mq("md") {
     font-size: rem(24);
