--- a/src/sass/page/_contact__box.scss
+++ b/src/sass/page/_contact__box.scss
@@ -10,7 +10,6 @@
       margin-right: 0;
       max-width: rem(465);
       width: 100%;
-      padding-right: 25px;
-      // padding-left: 25px;
+      padding-right: rem(25);
     }
   }
