--- a/src/sass/page/_footer__copyright.scss
+++ b/src/sass/page/_footer__copyright.scss
@@ -1,7 +1,7 @@
 @use "global" as *;
 
 .footer__copyright {
-  font-size: 12px;
+  font-size: rem(12);
   font-weight: $regular;
   line-height: 1.5;
   color: $white;
