--- a/src/sass/page/_header__item.scss
+++ b/src/sass/page/_header__item.scss
@@ -12,16 +12,13 @@
 
 .header__item a::after {
   content: '';
-  /*絶対配置で線の位置を決める*/
   position: absolute;
   bottom: rem(15);
   left: 10%;
-  /*線の形状*/
   width: 80%;
   height: rem(1);
   background: $white;
-  /*アニメーションの指定*/
   transition: all .3s;
-  transform: scale(0, 1);/*X方向0、Y方向1*/
-  transform-origin: center top;/*上部中央基点*/
+  transform: scale(0, 1);
+  transform-origin: center top;
 }
