--- a/src/sass/page/_information__box.scss
+++ b/src/sass/page/_information__box.scss
@@ -4,7 +4,7 @@
   margin-top: rem(25);
 
   @include mq("md") {
-    margin-top: 0;
+    margin-top: rem(0);
     max-width: rem(492);
     width: 100%;
     margin-left: rem(48);
