--- a/src/sass/page/_mv__title-wrap.scss
+++ b/src/sass/page/_mv__title-wrap.scss
@@ -5,13 +5,12 @@
   z-index: 10;
   top: 49.5%;
   left: 49.5%;
-  transform: translate(-50%, -50%); /* 画面中央に配置 */
+  transform: translate(-50%, -50%);
 
 
   @include mq("md") {
     width: 100%;
     left: 50%;
-    // top: 49%;
     transform: translate(-50%, -50%);
  }
 }
