--- a/src/sass/page/_price.scss
+++ b/src/sass/page/_price.scss
@@ -16,16 +16,16 @@
 
 
   @include mq("md") {
-    padding-top: 91px;
+    padding-top: rem(91);
     padding-left: rem(25);
     padding-right: rem(25);
-    padding-bottom: 100px;
+    padding-bottom: rem(100);
     max-width: rem(1130);
     }
   }
 
   .price__img-sp {
-    margin-top: 25px;
+    margin-top: rem(25);
   }
 
   .price__img-sp img {
@@ -35,7 +35,7 @@
   }
 
   .price-item__title {
-    font-size: 16px;
+    font-size: rem(16);
     line-height: 1.5;
     font-weight: $bold;
     font-family: Noto Sans JP;
@@ -56,40 +56,29 @@
 
   .price-text-line:nth-child(2) {
     @include mq("md") {
-      margin-top: 3px;
+      margin-top: rem(3);
     }
   }
-
-  // .price-text-line:nth-child(3) {
-  //   @include mq("md") {
-  //     margin-top: 2px;
-  //   }
-  // }
 
   .price-item__box {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
     justify-content: space-between;
-    // margin-top: 8px;
-
-    // @include mq("md") {
-    //   width: 75%;
-    // }
   }
 
 
 
   .price-item__text {
-    font-size: 14px;
+    font-size: rem(14);
     font-weight: $regular;
     line-height: calc(24/14);
     font-family: Noto Sans JP;
-    margin-top: 8px;
+    margin-top: rem(8);
     width: 80%;
 
     @include mq("md") {
-      font-size: 16px;
+      font-size: rem(16);
       line-height: calc(24/16);
       display: block;
       clear: left;
@@ -99,16 +88,16 @@
 }
 
   .price-item__text-sub {
-    font-size: 14px;
+    font-size: rem(14);
     font-weight: $regular;
     line-height: calc(24/14);
     font-family: Noto Sans JP;
-    margin-top: 8px;
+    margin-top: rem(8);
     width: 20%;
     text-align: right;
 
     @include mq("md") {
-      font-size: 16px;
+      font-size: rem(16);
       line-height: calc(24/16);
       display: block;
       float: left;
@@ -119,35 +108,34 @@
   .price__items {
 
     @include mq("md") {
-      max-width: 492px;
+      max-width: rem(492);
     }
   }
 
   .price-item {
-    margin-top: 40px;
+    margin-top: rem(40);
 
     @include mq("md") {
-      margin-top: -2px;
+      margin-top: rem(-2);
     }
   }
 
   .price-item:not(:first-child) {
 
     @include mq("md") {
-      margin-top: 40px;
+      margin-top: rem(40);
     }
   }
 
   .price-button-layout {
-    margin-top: 39px;
-    // padding-left: rem(68);
+    margin-top: rem(39);
     display: flex;
     justify-content: center;
 
     @include mq("md") {
       display: flex;
       justify-content: center;
-      padding-left: 0;
+      padding-left: rem(0);
       margin-top: rem(80);
     }
   }
@@ -156,18 +144,16 @@
 
     @include mq("md") {
       display: flex;
-      margin-top: 40px;
-      // justify-content: space-between;
+      margin-top: rem(40);
     }
   }
 
   .price__img-pc {
 
     @include mq("md") {
-      // max-width: 746px;
-      max-width: 492px;
-      margin-left: 93px;
-      margin-top: -1px;
+      max-width: rem(492);
+      margin-left: rem(93);
+      margin-top: rem(-1);
     }
   }
 
@@ -176,7 +162,6 @@
     @include mq("md") {
       width: 100%;
       object-fit: cover;
-      // aspect-ratio: 746/492;
       aspect-ratio: 492/746;
     }
   }
@@ -192,9 +177,7 @@
         background: url(/assets/images/prco-logo.svg) center center / contain no-repeat;
         width: rem(437);
         height: rem(201);
-        // bottom: rem(130);
         bottom: 4.9%;
         left: calc(50% - min(48vw, rem(620)));
-        // bottom: calc(50% - min(48vw, rem(536)));
     }
   }
