--- a/src/sass/page/_voice.scss
+++ b/src/sass/page/_voice.scss
@@ -20,34 +20,34 @@
   }
 
   .voice-card__item-box {
-    padding-top: 15px;
-    padding-left: 16px;
-    padding-right: 16px;
-    padding-bottom: 24px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25);
-    margin-top: 45px;
+    padding-top: rem(15);
+    padding-left: rem(16);
+    padding-right: rem(16);
+    padding-bottom: rem(24);
+    box-shadow: rem(2) rem(2) rem(10) rgba(0, 0, 0, 0.25);
+    margin-top: rem(45);
 
     @include mq("md") {
-      max-width: 520px;
-      padding-left: 24px;
-      padding-right: 24px;
-      padding-top: 24px;
-      padding-bottom: 24px;
-      margin-top: 0;
+      max-width: rem(520);
+      padding-left: rem(24);
+      padding-right: rem(24);
+      padding-top: rem(24);
+      padding-bottom: rem(24);
+      margin-top: rem(0);
     }
   }
 
   .voice-card__item-box:not(:first-child) {
-    margin-top: 41px;
+    margin-top: rem(41);
 
     @include mq("md") {
-      margin-top: 0;
-      margin-left: 40px;
+      margin-top: rem(0);
+      margin-left: rem(40);
     }
   }
 
   .voice-card__title-sub {
-    font-size: 12px;
+    font-size: rem(12);
     line-height: 1.5;
     font-weight: $regular;
     text-indent: -0.1rem;
@@ -58,56 +58,38 @@
     color: $green;
     border: rem(1) solid $green;
     padding: rem(7) rem(10) rem(3.5) rem(12);
-    // max-width: rem(108);
     white-space: nowrap;
-    margin-top: -2px;
-    // max-width: 120px;
+    margin-top: rem(-2);
     box-sizing: border-box;
     overflow: hidden;
-    // padding-top: 16px;
     max-width: 100%;
     display: inline-block;
 
-//    /* ライセンス講習のためのmax-width */
-//    &:first-of-type {
-//     max-width: 108px;
-// }
-
-// /* ファンダイビングのためのmax-width */
-// &:last-of-type {
-//     max-width: 120px;
-// }
-
     @include mq("md") {
-    padding: 8px 15px 7px 15px;
-    // max-width: 117px;
-
+    padding: rem(8) rem(15) rem(7) rem(15);
     }
   }
 
   .voice-card__title-text {
-    font-size: 16px;
+    font-size: rem(16);
     font-weight: $medium;
-    margin-top: -3px;
+    margin-top: rem(-3);
 
     @include mq("md") {
-      font-size: 24px;
-      margin-top: 13px;
+      font-size: rem(24);
+      margin-top: rem(13);
       line-height: 1.4;
     }
   }
 
   .voice-text-line {
-    background-color: $green; /* 横線の色 */
+    background-color: $green;
     content: "";
-    height: rem(1.5); /* 横線の高さ */
-    // margin-top: rem(4);
+    height: rem(1.5);
     flex-grow: 1;
 
     @include mq("md") {
-      // height: rem(1);
-      max-width: 276px;
-      // margin-top: -3px;
+      max-width: rem(276);
     }
   }
 
@@ -118,12 +100,12 @@
   }
 
   .voice-card__img {
-    margin-left: 13px;
-    max-width: 151px;
+    margin-left: rem(13);
+    max-width: rem(151);
 
     @include mq("md") {
-    max-width: 180px;
-    margin-left: 16px;
+    max-width: rem(180);
+    margin-left: rem(16);
     }
   }
 
@@ -139,40 +121,38 @@
 
   .voice-card__text-box {
     @include mq("md") {
-      margin-top: 40px;
+      margin-top: rem(40);
     }
   }
 
   .voice-card__text-sub {
-    font-size: 16px;
+    font-size: rem(16);
     font-weight: $regular;
     line-height: 1.5;
     font-family: Noto Sans JP;
-    margin-top: 15px;
+    margin-top: rem(15);
 
     @include mq("md") {
-      margin-top: 0;
+      margin-top: rem(0);
     }
   }
 
   .voice-card__title-box {
-    // max-width: 149px;
 
     @include mq("md") {
-      max-width: 276px;
+      max-width: rem(276);
     }
   }
 
   .voice-button-layout {
-    margin-top: 40px;
-    // padding-left: rem(68);
+    margin-top: rem(40);
     display: flex;
     justify-content: center;
 
     @include mq("md") {
       display: flex;
       justify-content: center;
-      padding-left: 0;
+      padding-left: rem(0);
       margin-top: rem(80);
     }
   }
@@ -181,8 +161,7 @@
 
     @include mq("md") {
       display: flex;
-      // justify-content: space-between;
-      margin-top: 26px;
+      margin-top: rem(26);
     }
   }
 
@@ -206,7 +185,6 @@
         background: url(/assets/images/voice-logo.svg) center center / contain no-repeat;
         width: rem(301);
         height: rem(138);
-        // bottom: rem(130);
         bottom: 82.3%;
         left: calc(50% - min(48vw, rem(620)));
     }
@@ -219,7 +197,6 @@
         background: url(/assets/images/voice-logo2.svg) center center / contain no-repeat;
         width: rem(71);
         height: rem(162);
-        // bottom: rem(130);
         bottom: 8%;
         right: calc(50% - min(48vw, rem(540)));
     }
