--- a/src/sass/module/_button.scss
+++ b/src/sass/module/_button.scss
@@ -71,7 +71,7 @@
   top: 53%;
   right: rem(4);
   width: rem(9);
-  margin-top: -4px;
+  margin-top: rem(-4);
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
   border-top: rem(1) solid $white;
