--- a/src/sass/page/_header__items.scss
+++ b/src/sass/page/_header__items.scss
@@ -4,6 +4,6 @@
   display: flex;
   align-items: center;
   height: inherit;
-  flex-wrap: wrap;/*スマホ表示折り返し用なのでPCのみなら不要*/
+  // flex-wrap: wrap;/*スマホ表示折り返し用なのでPCのみなら不要*/
 }
 
