フッターとブログカードホバー追加

--- a/src/sass/page/_footer-menu__item-text.scss
+++ b/src/sass/page/_footer-menu__item-text.scss
@@ -17,3 +17,13 @@
   list-style-type: none;
   white-space: nowrap;
 }
+
+.footer-menu__item-text:hover {
+  opacity: 0.7;
+  transition: 0.3s;
+}
+
+.footer-menu__item-text-b:hover {
+  opacity: 0.7;
+  transition: 0.3s;
+}
