--- a/src/sass/page/_blog-card__item-box.scss
+++ b/src/sass/page/_blog-card__item-box.scss
@@ -10,6 +10,8 @@
   margin-top: rem(26);
   max-width: rem(570);
   background-color: $white;
+  // opacity: 0.7;
+  // transition: 0.3s;
 
   @include mq("md") {
     margin-top: rem(0);
@@ -23,4 +25,9 @@
   @include mq("md") {
     margin-top: rem(0);
   }
+}
+
+.blog-card__item-box:hover {
+  opacity: 0.7;
+  transition: 0.3s;
 }
