--- a/src/sass/page/_footer-menu__item-text.scss
+++ b/src/sass/page/_footer-menu__item-text.scss
@@ -7,6 +7,7 @@
   vertical-align: middle;
   list-style-type: none;
   white-space: nowrap;
+  font-family: "Noto Sans JP", serif;
 }
 
 .footer-menu__item-text-b {
