--- a/src/sass/page/_footer__logo-text.scss
+++ b/src/sass/page/_footer__logo-text.scss
@@ -6,6 +6,7 @@
   font-weight: $bold;
   text-align: left;
   line-height: 1.125;
+  font-family: "Noto Sans JP", serif;
 }
 
 .footer__logo-text:hover {
