--- a/src/sass/module/_section-title__main.scss
+++ b/src/sass/module/_section-title__main.scss
@@ -2,8 +2,8 @@
 
 .section-title__main {
   font-size: rem(32);
-  // letter-spacing: 0.01em;
   line-height: 1.4;
+  font-family: "Gotu", sans-serif;
 
   @include mq("md") {
     font-size: rem(40);
