--- a/src/sass/page/_about-us-text.scss
+++ b/src/sass/page/_about-us-text.scss
@@ -4,6 +4,7 @@
   line-height: 1.5;
   font-weight: $regular;
   margin-top: rem(19);
+  font-family: "Noto Sans JP", serif;
 
   @include mq("md") {
     margin-top: rem(0);
