--- a/src/sass/page/_about-us-title.scss
+++ b/src/sass/page/_about-us-title.scss
@@ -6,6 +6,7 @@
   line-height: 1;
   font-weight: $regular;
   margin-top: rem(40);
+  font-family: "Gotu", sans-serif;
 
   @include mq("md") {
     font-size: rem(80);
