--- a/src/sass/page/_campaign-card-price__new.scss
+++ b/src/sass/page/_campaign-card-price__new.scss
@@ -5,6 +5,7 @@
   font-weight: $bold;
   color: $green;
   margin-left: rem(18);
+  font-family: "Lato", sans-serif;
 
   @include mq("md") {
     font-size: rem(40);
