--- a/src/sass/page/_mv__title-sub.scss
+++ b/src/sass/page/_mv__title-sub.scss
@@ -6,8 +6,8 @@
   color: $white;
   text-align: center;
   text-indent: 1.4rem;
-  font-family: Lato;
   font-weight: $regular;
+  font-family: "Lato", sans-serif;
 
   @include mq("md") {
     font-size: rem(80);
