--- a/src/sass/page/_contact__top-button.scss
+++ b/src/sass/page/_contact__top-button.scss
@@ -19,7 +19,10 @@
     @include mq("md") {
     bottom: 3%;
     right: calc(50% - min(49vw, rem(700)));
-
-
     }
+  }
+
+  .contact__top-button:hover {
+    opacity: 0.7;
+    transition: 0.3s;
   }
