--- a/src/sass/module/_colorbox.scss
+++ b/src/sass/module/_colorbox.scss
@@ -11,7 +11,7 @@
   width: 100%;
   height: 100%;
   z-index: 2;
-  background-color: $black2;
+  background-color: $green;
 }
 .colorbox img{
   display: block;
