--- a/src/sass/page/_blog__cards.scss
+++ b/src/sass/page/_blog__cards.scss
@@ -1,13 +1,16 @@
 @use "global" as *;
 
 .blog__cards {
-  display: flex;
+  // display: flex;
   align-items: center;
-  flex-direction: column;
+  // flex-direction: column;
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(250px, 1fr));
 
   @include mq("md") {
     gap: rem(40);
     margin-top: rem(78);
-    flex-direction: row;
+    // flex-direction: row;
+    grid-template-columns: repeat(3, 1fr);
   }
 }
