--- a/src/sass/page/_voice__cards.scss
+++ b/src/sass/page/_voice__cards.scss
@@ -1,9 +1,14 @@
 @use "global" as *;
 
   .voice__cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(250px, 1fr));
 
     @include mq("md") {
-      display: flex;
+      // display: flex;
       margin-top: rem(26);
+      grid-template-columns: repeat(2, 1fr);
+      column-gap: rem(40);
+      row-gap: rem(40);
     }
   }
