--- a/src/sass/global/_setting.scss
+++ b/src/sass/global/_setting.scss
@@ -13,7 +13,7 @@ $padding-sp: 15px;
 // フォント設定
 ////////////////////
 
-$base-font-family: "Gotu", sans-serif, "Lato"  sans-serif, "Noto Sans JP", serif "Noto serif JP", serif;
+$base-font-family: "Gotu", sans-serif, "Lato",  sans-serif, "Noto Sans JP", serif, "Noto serif JP", serif;
 $second-font-family: "";
 // ※検証ツールでしっかり反映されているか確認する
 
