--- a/src/sass/page/_information__inner.scss
+++ b/src/sass/page/_information__inner.scss
@@ -1,8 +1,8 @@
 @use "global" as *;
 
 .information__inner.inner {
-padding-left: rem(15);
-padding-right: rem(15);
+// padding-left: rem(15);
+// padding-right: rem(15);
 margin-left: auto;
 margin-right: auto;
 padding-top: rem(78);
@@ -11,8 +11,8 @@ max-width: rem(600);
 
 @include mq("md") {
   padding-top: rem(91);
-  padding-left: rem(23);
-  padding-right: rem(27);
+  // padding-left: rem(23);
+  // padding-right: rem(27);
   padding-bottom: rem(74);
   max-width: rem(1130);
   }
