--- a/src/sass/page/_voice__inner.scss
+++ b/src/sass/page/_voice__inner.scss
@@ -1,8 +1,8 @@
 @use "global" as *;
 
 .voice__inner.inner {
-  padding-left: rem(15);
-  padding-right: rem(15);
+  // padding-left: rem(15);
+  // padding-right: rem(15);
   margin-left: auto;
   margin-right: auto;
   padding-top: rem(81);
@@ -12,8 +12,8 @@
 
   @include mq("md") {
     padding-top: rem(135);
-    padding-left: rem(25);
-    padding-right: rem(25);
+    // padding-left: rem(25);
+    // padding-right: rem(25);
     padding-bottom: rem(144);
     max-width: rem(1130);
     }
