--- a/src/sass/page/_blog-card__item-box.scss
+++ b/src/sass/page/_blog-card__item-box.scss
@@ -10,6 +10,7 @@
   margin-top: rem(26);
   max-width: rem(570);
   background-color: $white;
+  align-self: stretch;
   // opacity: 0.7;
   // transition: 0.3s;
 
