--- a/src/sass/page/_blog-card__item-box.scss
+++ b/src/sass/page/_blog-card__item-box.scss
@@ -7,7 +7,7 @@
   padding-right: rem(16);
   padding-bottom: rem(22);
   box-shadow: rem(2) rem(2) rem(10) rgba(0, 0, 0, 0.25);
-  margin-top: rem(26);
+  // margin-top: rem(26);
   max-width: rem(570);
   background-color: $white;
   align-self: stretch;
@@ -20,13 +20,13 @@
   }
 }
 
-.blog-card__item-box:not(:first-child) {
-  margin-top: rem(40);
+// .blog-card__item-box:not(:first-child) {
+//   margin-top: rem(40);
 
-  @include mq("md") {
-    margin-top: rem(0);
-  }
-}
+//   @include mq("md") {
+//     margin-top: rem(0);
+//   }
+// }
 
 .blog-card__item-box:hover {
   opacity: 0.7;
