--- a/src/sass/page/_blog__cards.scss
+++ b/src/sass/page/_blog__cards.scss
@@ -5,7 +5,12 @@
   align-items: center;
   // flex-direction: column;
   display: grid;
-  grid-template-columns: repeat(auto-fit,minmax(250px, 1fr));
+  // grid-template-columns: repeat(auto-fit,minmax(250px, 1fr));
+  grid-template-columns: repeat(1, 1fr);
+
+  column-gap: rem(40);
+  row-gap: rem(40);
+  margin-top: rem(26);
 
   @include mq("md") {
     gap: rem(40);
