--- a/src/sass/page/_voice__cards.scss
+++ b/src/sass/page/_voice__cards.scss
@@ -2,7 +2,9 @@
 
   .voice__cards {
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(250px, 1fr));
+    // grid-template-columns: repeat(auto-fit,minmax(250px, 1fr));
+    grid-template-columns: repeat(1, 1fr);
+
 
     @include mq("md") {
       // display: flex;
