テキストFB修正

--- a/src/sass/page/_price-item__text-sub.scss
+++ b/src/sass/page/_price-item__text-sub.scss
@@ -14,6 +14,6 @@
       line-height: calc(24/16);
       display: block;
       float: left;
-      width: 11.3%;
+      // width: 11.3%;
     }
   }
