--- a/src/sass/page/_about-us__container.scss
+++ b/src/sass/page/_about-us__container.scss
@@ -2,10 +2,10 @@
 
 .about-us__container {
   @include mq("md") {
-    position: relative;
-    top: 49.9%;
+    position: absolute;
+    top: 50%;
     left: 50%;
-    transform: translate(-40.6%, -394.9%);
+    transform: translate(-40.6%, -37%);
     width: 100%;
     display: flex;
     max-width: rem(840);
