--- a/src/sass/page/_price-item__box.scss
+++ b/src/sass/page/_price-item__box.scss
@@ -4,5 +4,5 @@
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    justify-content: space-between;
+    // justify-content: space-between;
   }
