--- a/src/sass/page/_price-item__text.scss
+++ b/src/sass/page/_price-item__text.scss
@@ -14,7 +14,7 @@
       display: block;
       clear: left;
       float: left;
-      width: 88.7%;
+      // width: 88.7%;
       max-width: rem(430);
   }
 }
