--- a/src/sass/module/_section-title__sub-white.scss
+++ b/src/sass/module/_section-title__sub-white.scss
@@ -4,7 +4,8 @@
 
     font-size: rem(12);
     color: $white;
-    margin-top: rem(3);
+    margin-top: rem(2);
     font-family: "Noto Sans JP", serif;
+    font-weight: $regular;
 
 }
