--- a/src/sass/page/_campaign-swiper__button.scss
+++ b/src/sass/page/_campaign-swiper__button.scss
@@ -29,11 +29,11 @@
   background-image: url(/assets/images/arrow1.svg);
   width: rem(80);
   height: rem(80);
-  margin: auto;
+  // margin: auto;
   display: block;
-  position: absolute;
+  // position: absolute;
   top: 0;
-  right: calc(50% - min(48vw, rem(-27)));
+  // right: calc(50% - min(48vw, rem(-27)));
   }
 }
 
@@ -47,10 +47,10 @@
   background-image: url(/assets/images/arrow2.svg);
   width: rem(80);
   height: rem(80);
-  margin: auto;
+  // margin: auto;
   display: block;
-  position: absolute;
+  // position: absolute;
   top: 0;
-  right: calc(50% - min(48vw, rem(133)));
+  // right: calc(50% - min(48vw, rem(133)));
   }
 }
