--- a/src/sass/page/_about-us__button-layout.scss
+++ b/src/sass/page/_about-us__button-layout.scss
@@ -8,7 +8,7 @@
   @include mq("md") {
     display: flex;
     justify-content: center;
-    padding-left: rem(35);
+    // padding-left: rem(35);
     margin-top: rem(37);
   }
 }
