--- a/src/sass/module/_button.scss
+++ b/src/sass/module/_button.scss
@@ -1,7 +1,7 @@
 @use "global" as *;
 
 .button {
-  display: flex;
+  display: inline-flex;
   justify-content: space-between;
   text-align: center;
   text-decoration: none;
