--- a/src/sass/page/_about-us-text.scss
+++ b/src/sass/page/_about-us-text.scss
@@ -8,7 +8,8 @@
 
   @include mq("md") {
     margin-top: rem(0);
-    margin-left: rem(40);
+    // margin-left: rem(40);
     color: $white;
+    // max-width: rem(400);
   }
 }
