--- a/src/sass/page/_about-us__container.scss
+++ b/src/sass/page/_about-us__container.scss
@@ -3,11 +3,14 @@
 .about-us__container {
   @include mq("md") {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-40.6%, -37%);
-    width: 100%;
+    top: 40.8%;
+    left: 19.8%;
+    // transform: translate(-40.6%, -37%);
+    // width: 100%;
     display: flex;
+    // align-items: center;
+    gap: rem(40);
+    // padding: 0 rem(15);
     max-width: rem(840);
   }
 }
