--- a/src/sass/page/_about-us__inner.scss
+++ b/src/sass/page/_about-us__inner.scss
@@ -1,23 +1,23 @@
 @use "global" as *;
 
-.about-us__inner.inner {
-// padding-left: rem(15);
-// padding-right: rem(15);
-margin-left: auto;
-margin-right: auto;
-padding-top: rem(81);
-padding-bottom: rem(74);
-max-width: rem(600);
-
-@include mq("md") {
-  padding-top: rem(135);
-  // padding-left: rem(25);
-  // padding-right: rem(25);
-  padding-bottom: 0;
-  height: rem(1075);
-  max-width: rem(1130);
-}
-}
+// .about-us__inner.inner {
+// // padding-left: rem(15);
+// // padding-right: rem(15);
+// // margin-left: auto;
+// // margin-right: auto;
+// // padding-top: rem(81);
+// // padding-bottom: rem(74);
+// // max-width: rem(600);
+// }
+// @include mq("md") {
+//   // padding-top: rem(135);
+//   // padding-left: rem(25);
+//   // padding-right: rem(25);
+// //   padding-bottom: 0;
+// //   height: rem(1075);
+// //   max-width: rem(1130);
+// // }
+// }
 
 .about-us__inner {
   position: relative;
