--- a/src/sass/page/_information__inner.scss
+++ b/src/sass/page/_information__inner.scss
@@ -3,13 +3,13 @@
 .information__inner.inner {
 margin-left: auto;
 margin-right: auto;
-padding-top: rem(78);
-padding-bottom: rem(84);
+// padding-top: rem(78);
+// padding-bottom: rem(84);
 max-width: rem(600);
 
 @include mq("md") {
-  padding-top: rem(91);
-  padding-bottom: rem(74);
+  padding-top: rem(100);
+  // padding-bottom: rem(74);
   max-width: rem(1130);
   }
 }
