--- a/src/sass/page/_campaign.scss
+++ b/src/sass/page/_campaign.scss
@@ -1,15 +1,6 @@
 @use "global" as *;
 
-.campaign {
-  width: 100%;
-  overflow: visible;
-  margin-top: rem(38);
-
-  @include mq("md") {
-    margin-top: rem(111);
-  }
-}
-
-.campaign-swiper__container {
-  position: relative;
-}
+// .campaign {
+//   width: 100%;
+//   overflow: visible;
+// }
