--- a/src/sass/page/_blog__inner.scss
+++ b/src/sass/page/_blog__inner.scss
@@ -11,22 +11,22 @@
       background: url(/assets/images/blog-logo.svg) center center / contain no-repeat;
       width: rem(437);
       height: rem(201);
-      bottom: 72.7%;
+      bottom: 81.7%;
       left: calc(50% - min(48vw, rem(620)));
   }
 }
 
 .blog__inner.inner {
-  padding-top: rem(78);
+  // padding-top: rem(78);
   padding-left: rem(21);
   padding-right: rem(21);
-  max-width: rem(600);
+  // max-width: rem(600);
 
 
   @include mq("md") {
-    padding-top: rem(92);
+    // padding-top: rem(92);
     padding-left: $padding-pc;
     padding-right: $padding-pc;
-    max-width: rem(1130);
+    // max-width: rem(1130);
   }
 }
