--- a/src/sass/page/_contact__inner.scss
+++ b/src/sass/page/_contact__inner.scss
@@ -1,19 +1,19 @@
 @use "global" as *;
 
-.contact__inner.inner {
-  margin-left: auto;
-  margin-right: auto;
-  padding-top: rem(80);
-  padding-bottom: rem(105);
-  max-width: rem(600);
+// .contact__inner.inner {
+//   margin-left: auto;
+//   margin-right: auto;
+//   padding-top: rem(80);
+//   padding-bottom: rem(105);
+//   max-width: rem(600);
 
 
-  @include mq("md") {
-    padding-top: rem(143);
-    padding-bottom: rem(160);
-    max-width: rem(1130);
-    }
-  }
+//   @include mq("md") {
+//     padding-top: rem(143);
+//     padding-bottom: rem(160);
+//     max-width: rem(1130);
+//     }
+//   }
 
   .contact__inner {
     position: relative;
@@ -35,6 +35,6 @@
     width: rem(301);
     height: rem(138);
     right: calc(50% - min(48vw, rem(670)));
-    top: rem(102);
+    top: rem(-40);
    }
   }
