--- a/src/sass/page/_information__inner.scss
+++ b/src/sass/page/_information__inner.scss
@@ -1,15 +1,15 @@
 @use "global" as *;
 
-.information__inner.inner {
-margin-left: auto;
-margin-right: auto;
+// .information__inner.inner {
+// margin-left: auto;
+// margin-right: auto;
 // padding-top: rem(78);
 // padding-bottom: rem(84);
-max-width: rem(600);
+// max-width: rem(600);
 
-@include mq("md") {
-  padding-top: rem(100);
-  // padding-bottom: rem(74);
-  max-width: rem(1130);
-  }
-}
+// @include mq("md") {
+//   padding-top: rem(100);
+//   padding-bottom: rem(74);
+//   max-width: rem(1130);
+//   }
+// }
