--- a/src/sass/page/_information__button-layout.scss
+++ b/src/sass/page/_information__button-layout.scss
@@ -1,7 +1,8 @@
 @use "global" as *;
 
 .information__button-layout {
-  display: flex;
-  justify-content: center;
+  // display: flex;
+  // justify-content: center;
   margin-top: rem(40);
+  text-align: center;
 }
