--- a/src/sass/page/_campaign-slider-slide.scss
+++ b/src/sass/page/_campaign-slider-slide.scss
@@ -1,7 +1,8 @@
 @use "global" as *;
 
   .campaign-slider-slide {
-    display: block;
+    // display: block;
+    display: flex;
     margin-bottom: rem(10);
     width: rem(280);
     margin-top: rem(17);
