--- a/src/sass/page/_information__text-line.scss
+++ b/src/sass/page/_information__text-line.scss
@@ -4,8 +4,8 @@
   background-color: $green;
   content: "";
   height: rem(1.5);
-  margin-top: rem(-4);
-  flex-grow: 1;
+  margin-top: rem(1);
+  // flex-grow: 1;
 
   @include mq("md") {
     height: rem(1);
