--- a/src/sass/page/_campaign-card-text__title.scss
+++ b/src/sass/page/_campaign-card-text__title.scss
@@ -5,12 +5,14 @@
   color: $green;
   border: rem(1) solid $green;
   padding: rem(7) rem(10) rem(3.5) rem(12);
-  max-width: rem(108);
+  // max-width: rem(108);
+  // width: 100%;
   white-space: nowrap;
   box-sizing: border-box;
   overflow: hidden;
-  max-width: 100%;
-  display: inline-block;
+  // max-width: 100%;
+  // display: inline-block;
+  display: inline-flex;
   font-family: "Noto Sans JP", serif;
 
   @include mq("md") {
