--- a/src/sass/page/_campaign-card__item.scss
+++ b/src/sass/page/_campaign-card__item.scss
@@ -1,7 +1,9 @@
 @use "global" as *;
 
 .campaign-card__item {
-  display: block;
+  // display: block;
+  display: flex;
+  flex-direction: column;
   width: 100%;
   box-shadow: rem(2) rem(2) rem(10) rgba(0, 0, 0, 0.25);
   height: 100%;
