--- a/src/sass/page/_campaign-text-line.scss
+++ b/src/sass/page/_campaign-text-line.scss
@@ -4,8 +4,8 @@
   background-color: $green; /* 横線の色 */
   content: "";
   height: rem(1.5); /* 横線の高さ */
-  margin-top: rem(4);
-  flex-grow: 1;
+  margin-top: rem(5);
+  // flex-grow: 1;
 
   @include mq("md") {
     height: rem(1);
