--- a/src/sass/page/_drawer-menu__container.scss
+++ b/src/sass/page/_drawer-menu__container.scss
@@ -3,6 +3,7 @@
 .drawer-menu__container {
   display: flex;
   justify-content: center;
+  padding-top: rem(80);
 }
 
 .drawer-menu__container-left,
