--- a/src/sass/page/_information__box-title.scss
+++ b/src/sass/page/_information__box-title.scss
@@ -3,6 +3,7 @@
 .information__box-title {
   font-size: rem(20);
   font-family: "Noto Sans JP", serif;
+  font-weight: $bold;
 
   @include mq("md") {
     font-size: rem(24);
