--- a/src/sass/page/_campaign-page.scss
+++ b/src/sass/page/_campaign-page.scss
@@ -42,21 +42,42 @@
   left: calc(50% - min(48vw, rem(620)));
 }
 
-.campaign-page__tab-wrap {
-  display: flex;
-  flex-wrap: wrap;
+.campaign-page__tab {
+  margin-top: rem(52);
 }
-.campaign-page__tab_label {
-    color: $green;
-    border: solid 2px $green;
-    position: relative;
-    z-index: 1;
-    cursor: pointer;
-    flex: 1;
-    padding: 5px 0;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-  }
+
+.campaign-page__tab-list {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: rem(21);
+  row-gap: rem(16);
+}
+
+.campaign-page__tab-button {
+  justify-items: center;
+  position: relative;
+  border: solid rem(1) $green;
+  display: flex;
+  justify-content: center;
+
+
+
+}
+// .campaign-page__tab-wrap {
+//   display: flex;
+//   flex-wrap: wrap;
+// }
+// .campaign-page__tab_label {
+//     color: $green;
+//     border: solid 2px $green;
+//     position: relative;
+//     z-index: 1;
+//     cursor: pointer;
+//     flex: 1;
+//     padding: 5px 0;
+//     display: grid;
+//     grid-template-columns: repeat(2, 1fr);
+//   }
 // .campaign-page__tab-content {
 //   width: 100%;
 //   display: none;
