--- a/src/sass/page/_about-us__img1.scss
+++ b/src/sass/page/_about-us__img1.scss
@@ -1,7 +1,7 @@
 @use "global" as *;
 
 .about-us__img1 {
-  position: absolute;
+  position: relative;
   aspect-ratio: 128/194;
   width: 37%;
   top: 0;
