--- a/src/sass/page/_campaign-swiper__button-box.scss
+++ b/src/sass/page/_campaign-swiper__button-box.scss
@@ -4,8 +4,8 @@
 .campaign-swiper__button-box {
   display: flex;
   position: absolute;
-  top: -19%;
-  right: 0;
+  top: 1.5%;
+  right: 12.5%;
   max-width: rem(240);
   gap: rem(80);
 }
