--- a/src/sass/page/_campaign-swiper__container.scss
+++ b/src/sass/page/_campaign-swiper__container.scss
@@ -1,5 +1,5 @@
 @use "global" as *;
 
-.campaign-swiper__container {
-  position: relative;
-}
+// .campaign-swiper__container {
+//   position: relative;
+// }
