--- a/src/sass/page/_mv__title-sub.scss
+++ b/src/sass/page/_mv__title-sub.scss
@@ -12,7 +12,7 @@
   @include mq("md") {
     font-size: rem(80);
     text-align: center;
-    text-indent: 2.6rem;
+    text-indent: 0.53em;
     letter-spacing: 0.53em;
   }
 }
