--- a/src/sass/page/_campaign-top.scss
+++ b/src/sass/page/_campaign-top.scss
@@ -4,6 +4,7 @@
   width: 100%;
   overflow: visible;
   margin-top: rem(38);
+  position: relative;
 
   @include mq("md") {
     margin-top: rem(111);
