--- a/src/sass/page/_footer-menu__container-right.scss
+++ b/src/sass/page/_footer-menu__container-right.scss
@@ -3,13 +3,10 @@
 .footer-menu__container-right {
   margin-left: rem(18);
   display: grid;
-  width: 50%;
-  max-width: rem(200);
 
   @include mq("md") {
     display: flex;
-    max-width: rem(436);
-    justify-content: space-between;
-    margin-left: rem(103);
+    column-gap: rem(120);
+    margin-left: 0;
   }
 }
