--- a/src/sass/page/_footer-menu__inner.scss
+++ b/src/sass/page/_footer-menu__inner.scss
@@ -1,18 +1,18 @@
 @use "global" as *;
 
-.footer-menu__inner {
-  padding-left: rem(15);
-  padding-right: rem(15);
-  padding-top: rem(48);
-  padding-bottom: rem(25);
-  margin-left: auto;
-  margin-right: auto;
-  max-width: rem(600);
+// .footer-menu__inner {
+//   padding-left: rem(15);
+//   padding-right: rem(15);
+//   // padding-top: rem(48);
+//   // padding-bottom: rem(25);
+//   margin-left: auto;
+//   margin-right: auto;
+//   max-width: rem(600);
 
-@include mq("md") {
-  padding-top: rem(74);
-  padding-left: rem(25);
-  padding-right: rem(25);
-  max-width: rem(1130);
-}
-}
+// @include mq("md") {
+//   // padding-top: rem(74);
+//   padding-left: rem(25);
+//   padding-right: rem(25);
+//   max-width: rem(1130);
+// }
+// }
