--- a/src/sass/page/_information__box.scss
+++ b/src/sass/page/_information__box.scss
@@ -4,9 +4,11 @@
   margin-top: rem(20);
 
   @include mq("md") {
-    margin-top: rem(-5);
+    // margin-top: rem(-5);
     max-width: rem(492);
     width: 100%;
     margin-left: rem(48);
+    margin-top: 0;
+    padding-top: rem(60);
   }
 }
