--- a/src/sass/page/_voice-card__title-text.scss
+++ b/src/sass/page/_voice-card__title-text.scss
@@ -4,6 +4,8 @@
     font-size: rem(16);
     font-weight: $medium;
     margin-top: rem(-3);
+    border-bottom: rem(1) solid $green;
+
 
     @include mq("md") {
       font-size: rem(24);
