アバウトアス修正

--- a/src/sass/page/_about-us__img1.scss
+++ b/src/sass/page/_about-us__img1.scss
@@ -4,8 +4,8 @@
   position: relative;
   aspect-ratio: 128/194;
   width: 37%;
-  top: 0;
-  left: 0;
-  display: block;
+  // top: 0;
+  // left: 0;
+  // display: block;
   margin-top: -61%;
 }
