--- a/src/sass/module/_breadcrumb.scss
+++ b/src/sass/module/_breadcrumb.scss
@@ -1,5 +1,24 @@
 @use "global" as *;
 
 .breadcrumb {
-  padding-top: rem(8);
+  font-size: rem(14);
+  // position: relative;
+}
+
+.breadcrumb-top {
+  padding-top: rem(10);
+}
+
+.breadcrumb a span::after {
+  border-right: rem(1) solid $black2;
+  border-top: rem(1) solid $black2;
+  content: '';
+  display: inline-block;
+  width: rem(7);
+  height: rem(7);
+  // position: absolute;
+  transform: rotate(45deg);
+  margin-bottom: rem(2);
+  margin-left: rem(3);
+  margin-right: rem(5);
 }
