--- a/src/sass/module/_sub-page-mv.scss
+++ b/src/sass/module/_sub-page-mv.scss
@@ -13,3 +13,13 @@
   width: 100%;
   height: inherit;
 }
+
+.sub-page-mv__inner::after {
+  background-color: rgba(64, 143, 149, 0.3);
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
