--- a/src/sass/page/_header__inner.scss
+++ b/src/sass/page/_header__inner.scss
@@ -11,6 +11,7 @@
   @include mq("md") {
     height: rem(90);
     padding-left: rem(25);
+   padding-right: rem(40);
     margin-right: rem(1);
     border-bottom: none;
   }
