--- a/src/sass/page/_campaign__container-slider.scss
+++ b/src/sass/page/_campaign__container-slider.scss
@@ -1,6 +1,6 @@
 @use "global" as *;
 
-  .campaign-slider {
+  .campaign__container-slider {
     box-sizing: content-box;
     padding-right: calc((100vw - 100%) / 2);
     width: 100%;
