--- a/src/sass/page/_campaign-slider-slide.scss
+++ b/src/sass/page/_campaign-slider-slide.scss
@@ -1,6 +1,6 @@
 @use "global" as *;
 
-  .campaign-slider-slide {
+  .campaign__container-slider-slide {
     display: flex;
     margin-bottom: rem(10);
     width: rem(280);
