--- a/src/sass/page/_campaign__container-card.scss
+++ b/src/sass/page/_campaign__container-card.scss
@@ -1,6 +1,6 @@
 @use "global" as *;
 
-.campaign-card__item {
+.campaign__container-card {
   display: flex;
   flex-direction: column;
   width: 100%;
