topのキャンペーンbem修正

--- a/src/sass/page/_campaign-card__body.scss
+++ b/src/sass/page/_campaign-card__body.scss
@@ -1,6 +1,6 @@
 @use "global" as *;
 
-.container-card__body {
+.campaign-card__body {
   padding-top: rem(16);
   padding-right: rem(17);
   padding-bottom: rem(17);
