--- a/src/sass/page/_campaign-card__title.scss
+++ b/src/sass/page/_campaign-card__title.scss
@@ -1,6 +1,6 @@
 @use "global" as *;
 
-.campaign-card-text__title {
+.campaign-card__title {
   font-size: rem(12);
   color: $green;
   border: rem(1) solid $green;
