--- a/src/sass/page/_campaign-card__price-box.scss
+++ b/src/sass/page/_campaign-card__price-box.scss
@@ -1,6 +1,6 @@
 @use "global" as *;
 
-.campaign-card-price-box {
+.campaign-card__price-box {
   display: flex;
   justify-content: center;
   align-items: baseline;
