--- a/src/sass/module/_section-title__sub.scss
+++ b/src/sass/module/_section-title__sub.scss
@@ -1,9 +1,15 @@
 @use "global" as *;
 
 .section-title__sub {
-  font-size: rem(12);
-  color: $green;
-  margin-top: rem(3);
-  font-family: "Noto Sans JP", serif;
-  font-weight: $regular;
+  font-size: rem(32);
+  line-height: 1.4;
+  font-family: "Gotu", sans-serif;
+
+  @include mq("md") {
+    font-size: rem(40);
+  }
+}
+
+.section-title__sub::first-letter {
+  color: $green; /* 先頭の文字の色を変更 */
 }
