ブログセクションタイトル修正

--- a/src/sass/module/_section-title__main-white.scss
+++ b/src/sass/module/_section-title__main-white.scss
@@ -3,9 +3,12 @@
 .section-title__main-white {
 
     font-size: rem(12);
-    color: $white;
     margin-top: rem(2);
     font-family: "Noto Sans JP", serif;
     font-weight: $regular;
+
+    @include mq("md") {
+        color: $white;
+    }
 
 }
