--- a/src/sass/page/_blog-card__text-line.scss
+++ b/src/sass/page/_blog-card__text-line.scss
@@ -1,6 +1,6 @@
 @use "global" as *;
 
-.blog-text-line {
+.blog-card__text-line {
   background-color: $green; /* 横線の色 */
   content: "";
   height: rem(1.5); /* 横線の高さ */
