ボイスまでbem修正

--- a/src/sass/module/_section-title__sub-white.scss
+++ b/src/sass/module/_section-title__sub-white.scss
@@ -12,3 +12,10 @@
       color: $white;
     }
   }
+
+  .section-title__sub-white::first-letter {
+
+    @include mq("md") {
+      color: $white;
+    }
+  }
