コンタクトbem修正

--- a/src/sass/page/_contact-box__logo-layout.scss
+++ b/src/sass/page/_contact-box__logo-layout.scss
@@ -1,6 +1,6 @@
 @use "global" as *;
 
-  .contact__logo-layout {
+  .contact-box__logo-layout {
     display: flex;
     justify-content: center;
     @include mq("md") {
