--- a/src/sass/page/_contact-item__text.scss
+++ b/src/sass/page/_contact-item__text.scss
@@ -1,6 +1,6 @@
 @use "global" as *;
 
-  .contact-information__item-text {
+  .contact-item__text {
     font-size: rem(16);
     line-height: calc(24/16);
     font-weight: $regular;
