--- a/src/sass/page/_contact__title-text.scss
+++ b/src/sass/page/_contact__title-text.scss
@@ -1,6 +1,6 @@
 @use "global" as *;
 
-  .contact-section-title__text {
+  .contact__title-text {
     color: $green;
     font-size: rem(14);
     line-height: calc(18/14);
