--- a/src/sass/page/_footer__container-left.scss
+++ b/src/sass/page/_footer__container-left.scss
@@ -1,7 +1,9 @@
 @use "global" as *;
 
-.footer-menu__title {
+.footer__container-left {
+
   @include mq("md") {
     display: flex;
+    column-gap: rem(120);
   }
 }
