--- a/src/sass/page/_footer__title.scss
+++ b/src/sass/page/_footer__title.scss
@@ -1,9 +1,7 @@
 @use "global" as *;
 
-.footer-menu__container-left {
-
+.footer__title {
   @include mq("md") {
     display: flex;
-    column-gap: rem(120);
   }
 }
