--- a/src/sass/page/_footer-title__facebook-logo.scss
+++ b/src/sass/page/_footer-title__facebook-logo.scss
@@ -1,6 +1,6 @@
 @use "global" as *;
 
-.footer__facebook-logo {
+.footer-title__facebook-logo {
   display: block;
   width: rem(24);
   height: rem(24);
@@ -11,7 +11,7 @@
   }
 }
 
-.footer__facebook-logo:hover {
+.footer-title__facebook-logo:hover {
   opacity: 0.7;
   transition: 0.3s;
 }
